tests/base/invalid/SetDefine_CompileFail_1.whiley
define intlist as {int}

void System::main([string] args):    
     il = {1,2,3}
     this.out.println(str(|il|))
     this.out.println(str(il)[0])
